Feature/osdop 281/1/journey to start update page (#321)
* Added slideout to request update on a nomination

* Addressed PR comments

* Added additional guidance text to request textarea

* Added validation to the update reason

* Added case event for requesting an update

* Addressed PR comments

* Added journey to draft update start page

* Added update reason to startNominationUpdate.ftl

* Addressed PR comments

* Renamed _slideoutButton parameter

* Removed htmlTitle argument

* Asserted view name in NominationStartUpdateControllerTest

* Added test for when there's no submitted nomination

* Removed unused overrideClass parameter

* Fixed issues after merge and addressed PR comments

* Map.of() usages to Collections.emptyMap()

* Verified no service interaction when a not found is hit in the case processing controller